--- a/设计模式/设计模式总述.md
+++ b/设计模式/设计模式总述.md
@@ -1,6 +1,7 @@
 ### 设计模式总述
 
 * 参考：https://my.oschina.net/botkenni/blog/1603660
+* 面向对象的设计模式就是将问题对象化，以对象调用或者注入的方式来解决问题。面向对象思想需要保持扩展对象，维护对象的思维去使用，有别于传统的面向过程方式，总是在扩展方法，维护方法，对于需求的改动只有改动方法来实现，这样做容易产生新bug，同时对于系统的扩展性，复用性也大大降低。然而在工程开发中少用到模式这一现象，我认为主要在于开发的工期要求；代码的复杂度应尽量简单（模式的门槛），从而使得新人快速上手。但是这样的项目就如同一头可爱的小狮子，前期很可爱，大家其乐融融，越到后面越恐怖（维护性）。
 
 
 * 分类
@@ -28,6 +29,10 @@
   > - 开放封闭原则：一个软件实体如类、模块和函数应该对扩展开放，对修改关闭。
   > - 里氏替换原则：所有引用基类的地方必须能透明地使用其子类的对象.
   > - 依赖倒置原则：高层模块不应该依赖低层模块，二者都应该依赖其抽象；抽象不应该依赖细节；细节应该依赖抽象。
+  >   * 高层：客户端、服务消费者、方法调用者
+  >   * 低层：服务端、服务提供者、方法实现者
+  >   * 抽象：交互行为、策略、模型。。。（稳定的，可重用）
+  >   * 文章参考：https://blog.csdn.net/tjiyu/article/details/76862538
   > - 单一职责原则：不要存在多于一个导致类变更的原因。通俗的说，即一个类只负责一项职责。
   > - 接口隔离原则：客户端不应该依赖它不需要的接口；一个类对另一个类的依赖应该建立在最小的接口上。
   > - 迪米特法则：一个对象应该对其他对象保持最少的了解。
