--- a/编程之禅.md
+++ b/编程之禅.md
@@ -15,3 +15,7 @@
 * 代码层级
 
   在代码中尽量避免使用if else 的联合使用,这样在面对逻辑比较复杂的业务时会造成代码的层级很深，很不利于后期的维护，可以使用if条件取反判断简化层级。
+
+* 关于迭代器
+
+  在迭代器中进行变量加偏移量进行读取时候需要考虑是否会超长
