--- a/成长/second/支付和结算.md
+++ b/成长/second/支付和结算.md
@@ -48,7 +48,7 @@
 
   * 结算脚本
 
-    * orderController::actionSettleAllOrder
+    * orderController::actionMakeOrderSettled
 
   * 结论
 
@@ -67,4 +67,29 @@
     ```
 
 * 问题
+  
   * 如果用户四舍五入计算，结算时的金额是
+
+### 订单结算
+
+```
+BalanceService::settlementOrder
+```
+
+* 走记录表
+
+  ```
+  ShopBalanceRecord::createRecordFromOrder
+  ```
+
+  
+
+### 结算相关表
+
+order
+
+shop_balance
+
+shop_balance_record【order表的settlement_id对应的就是这个表的id】
+
+shop_withdraw
