--- a/编程之禅.md
+++ b/编程之禅.md
@@ -19,3 +19,13 @@
 * 关于迭代器
 
   在迭代器中进行变量加偏移量进行读取时候需要考虑是否会超长
+
+
+
+* 项目开发
+
+  需要有一些规范，这些规范要更多的适合于维护
+
+  有时候维护一些项目，应为使用了一些不容易追踪到的写法，导致维护时需要看数据的一整个生命周期。
+
+  比如我想查看下完订单后一张表的某个字段是怎么取的，我需要去看一整个的流程，太费劲了。在母星中学到的维护方式是，insert表都是new model，然后update。update表都是model::findOne,然后save。这样非常好追踪和维护！！
