bq鎻愪氦涓€娉㈡

--- a/一些问题记录.md
+++ b/一些问题记录.md
@@ -2,3 +2,13 @@
 
 * redis中带条件的分页如何保证count和list的准确
   * redis中的数据做条件筛选只能拿出来后在代码中判断，这就会导致count和list不准。
+
+
+
+* 在方法传参中，特别是PHP。使用了数组传参会造成非常难以维护的状态，数组里有无限种可能，如果传参层数过多，那简直是噩梦！
+  * 使用对象属性，传入对象。在对象中规范属性。可维护性大大提升。
+* 在使用处理json数据时，往往会因为json数据的杂乱导致处理这些数据处于一种摸瞎的状态。json和PHP的数组同理，有无限可能。必须要知道json的数据格式。才能进行处理。在我看来，这样的数据维护起来也是很费劲的。
+  * 在Java中有json转对象的方式。转成Javabean，然后处理对象。可维护性也会提高。但是对于嵌套很深的对象。怎么搞？？
+  * PHP是否也能转成对象处理。数组处理的方式虽然开发起来很方便，但是维护很困难。没有属性的定义。这样很难
+    * 使用json_decode不加true将json数据转化为stdClass对象。然后将对象转化为对应的数据对象。这样多一层的绑定会有性能损耗。绑定方式可使用反射来完成。参考https://www.imooc.com/wenda/detail/600411
+    * 
